# VictronBTLELogger

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  VictronBTLELogger.sln  VictronBTLELogger.vcxproj  postinst  postrm  prerm  victronbtlelogger-version.h.in  victronbtlelogger.cpp  victronbtlelogger.service
.github/workflows/: cmake-multi-platform.yml
